# Time_Master

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
DEBIAN/: control
src/: __init__.py  color.py  manager.py  time_master.py
usr/local/lib/python3/dist-packages/time_manager/: __init__.py  manager.py  time_manager.py
