[metadata]
name = time_master
version = 1.0.0
author = Walid El-Hioul
author_email = walidelhioul0000@gmail.com
description = Time Management System with CLI Interface
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  time_master = time_master:main